// =========================================================================
// Farmease Livestock Module - DBML Schema
// Optimized for direct import into https://dbdiagram.io/
// =========================================================================

// -------------------------------------------------------------------------
// 1. ENUMS (Tabel Referensi Statis)
// -------------------------------------------------------------------------

Enum enum_gender {
  jantan
  betina
}

Enum enum_sheep_status {
  aktif
  hamil
  dijual
  mati
  disembelih
}

Enum enum_feed_category {
  hijauan
  konsentrat
  pellet
  greenery
  vitamin
}

Enum enum_mating_method {
  alami
  inseminasi_buatan
}

Enum enum_mating_status {
  proses
  sukses
  gagal
}

Enum enum_pregnancy_status {
  dikandung
  melahirkan
  keguguran
}

Enum enum_offspring_gender {
  jantan
  betina
  campuran
}

Enum enum_offspring_condition {
  sehat
  lemas
  cacat
  mati
}

Enum enum_manure_activity {
  collection
  fermentation
  distribution
}

Enum enum_manure_dest {
  internal
  internal_kebun
  external_sale
}

Enum enum_task_category {
  pakan
  kesehatan
  kotoran
  perkawinan
  kelahiran
  penyiraman
  pemupukan
  pembersihan
  pemangkasan
  panen
  weighing
  maintenance
  admin
  umum
}

Enum enum_frequency {
  sekali
  harian
  mingguan
  bulanan
}

Enum enum_priority {
  rendah
  sedang
  tinggi
}

Enum enum_task_rincian {
  "Pakan Pagi"
  "Pakan Sore"
  "Konversi Pakan"
  "Pemberian Obat"
  "Pemberian Vitamin"
  "Vaksinasi"
  "Pemeriksaan Medis"
  "Pembersihan Kandang"
  "Fermentasi Kotoran"
  "Kawin Alami"
  "Inseminasi Buatan"
  "Pencatatan Kelahiran"
  "Pemeriksaan Anak & Induk"
}

Enum enum_task_status {
  belum
  proses
  selesai
  terlambat
  pending
  done
  menunggu
}

// -------------------------------------------------------------------------
// 2. MASTER & AUTH TABLES
// -------------------------------------------------------------------------

Table master_farms {
  id UUID [pk]
  code VARCHAR(15) [unique, not null]
  name VARCHAR(100) [not null]
  location VARCHAR(150)
  description TEXT
  created_at TIMESTAMP
  updated_at TIMESTAMP
}

Table auth_roles {
  id_role UUID [pk]
  role_name VARCHAR(20) [not null]
  permissions VARCHAR(20) [not null, default: 'view']
  created_at TIMESTAMP
  updated_at TIMESTAMP
}

Table auth_accounts {
  id_account UUID [pk]
  username VARCHAR(50) [unique, not null]
  password VARCHAR(255) [not null]
  operator_category VARCHAR(50) [not null]
  id_role UUID
  farm_id UUID
  created_at TIMESTAMP
  updated_at TIMESTAMP
}

Table master_cages {
  id_cage UUID [pk]
  cage_code VARCHAR(10) [unique, not null]
  capacity INT [not null]
  cage_type VARCHAR(20) [not null]
  cage_name VARCHAR(50)
  farm_id UUID
  created_at TIMESTAMP
  updated_at TIMESTAMP
}

Table master_sheep_types {
  id_type UUID [pk]
  type_name VARCHAR(50) [not null]
  type_description TEXT
  created_at TIMESTAMP
  updated_at TIMESTAMP
}

// -------------------------------------------------------------------------
// 3. LIVESTOCK (HEWAN) TABLES
// -------------------------------------------------------------------------

Table livestock_sheep {
  id_sheep UUID [pk]
  sheep_code VARCHAR(15) [unique, not null]
  sheep_name VARCHAR(50)
  gender enum_gender [not null]
  date_of_birth DATE
  status enum_sheep_status [not null, default: 'aktif']
  origin VARCHAR(30)
  id_cage UUID
  id_type UUID
  id_father UUID
  id_mother UUID
  created_by UUID
  updated_by UUID
  created_at TIMESTAMP
  updated_at TIMESTAMP
}

// -------------------------------------------------------------------------
// 4. LOGISTICS & RECORDINGS TABLES
// -------------------------------------------------------------------------

Table logistics_weights {
  id_weight UUID [pk]
  id_sheep UUID [not null]
  weighing_date DATE [not null]
  weight_kg DECIMAL(5,2) [not null]
  notes TEXT
  created_at TIMESTAMP
}

Table logistics_healths {
  id_health UUID [pk]
  id_sheep UUID [not null]
  checkup_date DATE [not null]
  diagnosis TEXT [not null]
  action TEXT
  medicine_given TEXT
  inspector_name VARCHAR(50)
  notes TEXT
  created_at TIMESTAMP
  updated_at TIMESTAMP
}

Table logistics_feeds {
  id_feed UUID [pk]
  feed_name VARCHAR(50) [not null]
  unit VARCHAR(10) [not null]
  available_stock DECIMAL(8,2) [default: 0.00]
  price_per_unit DECIMAL(10,2)
  category enum_feed_category
  external_source_id VARCHAR(50)
  source_type VARCHAR(20) [default: 'internal']
  source_api_url TEXT
  notes TEXT
  created_at TIMESTAMP
  updated_at TIMESTAMP
}

Table logistics_feedings {
  id_feeding UUID [pk]
  id_sheep UUID [not null]
  id_feed UUID [not null]
  feeding_date DATE [not null]
  amount DECIMAL(8,2) [not null]
  unit VARCHAR(10) [not null]
  notes TEXT
  created_at TIMESTAMP
}

Table logistics_manures {
  id_manure UUID [pk]
  id_sheep UUID [not null]
  activity_type enum_manure_activity [not null]
  amount DECIMAL(8,2) [not null]
  unit VARCHAR(10) [not null]
  external_destination_id VARCHAR(50)
  destination_type enum_manure_dest [default: 'internal']
  notes TEXT
  created_at TIMESTAMP
}

// -------------------------------------------------------------------------
// 5. BREEDING (PERKAWINAN & KELAHIRAN) TABLES
// -------------------------------------------------------------------------

Table breeding_matings {
  id_mating UUID [pk]
  id_sheep_male UUID [not null]
  id_sheep_female UUID [not null]
  mating_date DATE [not null]
  mating_method enum_mating_method [not null]
  status enum_mating_status [not null, default: 'proses']
  inbreeding_flag BOOLEAN [default: FALSE]
  coefficient_of_inbreeding DECIMAL(10,8) [default: 0.0]
  notes TEXT
  created_at TIMESTAMP
  updated_at TIMESTAMP
}

Table breeding_pregnancies {
  id_pregnancy UUID [pk]
  id_mating UUID [not null]
  pregnancy_date DATE [not null]
  pregnancy_status enum_pregnancy_status [not null, default: 'dikandung']
  expected_birth_date DATE
  notes TEXT
  created_at TIMESTAMP
  updated_at TIMESTAMP
}

Table breeding_births {
  id_birth UUID [pk]
  id_pregnancy UUID [not null]
  birth_date DATE [not null]
  number_of_offspring INT [not null]
  offspring_gender enum_offspring_gender
  offspring_condition enum_offspring_condition
  notes TEXT
  created_at TIMESTAMP
}

// -------------------------------------------------------------------------
// 6. OPERATIONS (TUGAS & PENJADWALAN) TABLES
// -------------------------------------------------------------------------

Table operations_routine_schedules {
  id UUID [pk]
  title TEXT [not null]
  description TEXT
  category enum_task_category
  frequency enum_frequency [not null]
  days_of_week "INT[]"
  day_of_month INT
  start_date DATE [not null]
  end_date DATE
  start_time TIME
  end_time TIME
  priority enum_priority [default: 'sedang']
  id_cage UUID
  id_account UUID
  rincian enum_task_rincian
  is_active BOOLEAN [default: TRUE]
  created_at TIMESTAMP
  updated_at TIMESTAMP
}

Table operations_tasks {
  id_task UUID [pk]
  title VARCHAR(100) [not null]
  description TEXT
  task_date TIMESTAMP
  status enum_task_status [default: 'pending']
  priority enum_priority [default: 'sedang']
  id_account UUID
  category enum_task_category
  end_time VARCHAR(50) [default: '']
  schedule_id UUID
  id_cage UUID
  start_time TIME
  rincian enum_task_rincian
  created_at TIMESTAMP
  updated_at TIMESTAMP
}

Table operations_notifications {
  id_notification UUID [pk]
  title VARCHAR(100)
  message TEXT [not null]
  is_read BOOLEAN [default: FALSE]
  id_account UUID [not null]
  type VARCHAR(30)
  created_at TIMESTAMP
}

// -------------------------------------------------------------------------
// 7. RELATIONSHIPS (FOREIGN KEYS)
// -------------------------------------------------------------------------

Ref: auth_accounts.id_role > auth_roles.id_role
Ref: auth_accounts.farm_id > master_farms.id

Ref: master_cages.farm_id > master_farms.id

Ref: livestock_sheep.id_cage > master_cages.id_cage
Ref: livestock_sheep.id_type > master_sheep_types.id_type
Ref: livestock_sheep.id_father > livestock_sheep.id_sheep
Ref: livestock_sheep.id_mother > livestock_sheep.id_sheep
Ref: livestock_sheep.created_by > auth_accounts.id_account
Ref: livestock_sheep.updated_by > auth_accounts.id_account

Ref: logistics_weights.id_sheep > livestock_sheep.id_sheep
Ref: logistics_healths.id_sheep > livestock_sheep.id_sheep
Ref: logistics_feedings.id_sheep > livestock_sheep.id_sheep
Ref: logistics_feedings.id_feed > logistics_feeds.id_feed
Ref: logistics_manures.id_sheep > livestock_sheep.id_sheep

Ref: breeding_matings.id_sheep_male > livestock_sheep.id_sheep
Ref: breeding_matings.id_sheep_female > livestock_sheep.id_sheep
Ref: breeding_pregnancies.id_mating > breeding_matings.id_mating
Ref: breeding_births.id_pregnancy > breeding_pregnancies.id_pregnancy

Ref: operations_routine_schedules.id_cage > master_cages.id_cage
Ref: operations_routine_schedules.id_account > auth_accounts.id_account

Ref: operations_tasks.id_account > auth_accounts.id_account
Ref: operations_tasks.schedule_id > operations_routine_schedules.id
Ref: operations_tasks.id_cage > master_cages.id_cage

Ref: operations_notifications.id_account > auth_accounts.id_account
